tests/files/parser_tests/should_fail/004.cmdr
//Not an expression
x = true false;